@@ -1,26 +1,69 @@
-/*
- * Adds an 'integTest' source set, which contains the integration tests for the project.
- */
 apply plugin: 'java'
-rootProject.apply plugin: IntegTestPlugin
+
+sourceSets {
+    integTest {
+        compileClasspath += main.output + test.output
+        runtimeClasspath += main.output + test.output
+    }
+}
 
 configurations {
-    integTestCompile {
-        extendsFrom testCompile
-    }
-    integTestRuntime {
-        extendsFrom integTestCompile, testRuntime
-    }
+    integTestCompile.extendsFrom testCompile
+    integTestRuntime.extendsFrom testRuntime
 }
 
 dependencies {
     integTestCompile project(":internalIntegTesting")
 }
 
-sourceSets {
-    integTest {
-        compileClasspath = sourceSets.main.output + sourceSets.test.output + configurations.integTestCompile
-        runtimeClasspath = output + compileClasspath + configurations.integTestRuntime
+ext.integTestTasks = tasks.withType(Test).matching { it.name.toLowerCase().endsWith('integtest') }
+
+integTestTasks.all { Test task ->
+    dependsOn ':intTestImage'
+    testClassesDir = sourceSets.integTest.output.classesDir
+    classpath = sourceSets.integTest.runtimeClasspath
+    testSrcDirs = []
+    jvmArgs '-Xmx512m', '-XX:MaxPermSize=256m', '-XX:+HeapDumpOnOutOfMemoryError'
+
+    testResultsDir = file("${project.testResultsDir}/$name")
+
+    systemProperties['org.gradle.integtest.versions'] = project.hasProperty("testAllVersions") ? 'all' : 'latest'
+    if (project.hasProperty('crossVersionTestsOnly')) {
+        include '**/*CrossVersion*'
+    }
+
+    dependsOn project.task("configure${task.name.capitalize()}") << {
+        configure(task) {
+            testReportDir = file("${project.reporting.baseDir}/$name")
+            systemProperties['integTest.gradleHomeDir'] = rootProject.intTestImage.destinationDir.absolutePath
+            systemProperties['integTest.gradleUserHomeDir'] = rootProject.file('intTestHomeDir').absolutePath
+            systemProperties['integTest.libsRepo'] = rootProject.file('build/repo')
+            
+            // If the projects int test need the distributions, they should add:
+            // inputs.files rootProject.buildDists
+            systemProperties['integTest.distsDir'] = rootProject.distsDir.absolutePath
+
+            // The user home dir is not wiped out by clean
+            // Move the daemon working space underneath the build dir so they don't pile up on CI
+            systemProperties['org.gradle.integtest.daemon.registry'] = file("$rootProject.buildDir/daemon").absolutePath
+        }
+    }
+}
+
+task integTest(type: Test) {
+    def defaultExecuter = project.hasProperty("defaultIntegTestExecuter") ? project.defaultIntegTestExecuter : "embedded"
+    systemProperties['org.gradle.integtest.executer'] = defaultExecuter
+}
+check.dependsOn(integTest)
+
+['embedded', 'forking', 'daemon', 'embeddedDaemon'].each { mode ->
+    def taskName = "${mode}IntegTest"
+    tasks.addRule(taskName) { name ->
+        if (name == taskName) { 
+            tasks.add(taskName, Test).configure {
+                systemProperties['org.gradle.integtest.executer'] = mode
+            }
+        }
     }
 }
 
@@ -41,97 +84,5 @@ plugins.withType(org.gradle.plugins.ide.eclipse.EclipsePlugin) { // lazy as plug
             plusConfigurations.add(configurations.integTestCompile)
             plusConfigurations.add(configurations.integTestRuntime)
         }
-    }
-}
-
-integTestTasks = tasks.withType(Test).matching { it.name.toLowerCase().endsWith('integtest') }
-
-integTestTasks.all {
-    dependsOn ':intTestImage', project(":docs").tasks.matching { it.name == "samples" } // lazy as doc not eval'd yet
-    testClassesDir = sourceSets.integTest.output.classesDir
-    classpath = sourceSets.integTest.runtimeClasspath
-    testSrcDirs = []
-    jvmArgs '-XX:+HeapDumpOnOutOfMemoryError'
-    maxParallelForks = guessMaxForks()
-
-    testResultsDir = file("${project.testResultsDir}/$name")
-
-    systemProperties['org.gradle.integtest.versions'] = 'latest'
-
-    doFirst {
-        testReportDir = file("${project.reportsDir}/$name")
-        systemProperties['integTest.gradleHomeDir'] = integTestImageDir.absolutePath
-        systemProperties['integTest.gradleUserHomeDir'] = integTestUserDir.absolutePath
-        systemProperties['integTest.samplesdir'] = project(":docs").samplesDir.absolutePath
-        if (isCIBuild()) {
-            systemProperties['org.gradle.integtest.versions'] = 'all'
-            maxParallelForks = 4
-        }
-    }
-}
-
-['embedded', 'forking', 'daemon', 'embeddedDaemon'].each {
-    def mode = it
-    def taskName = "${it}IntegTest"
-    tasks.addRule(taskName) { name ->
-        if (name != taskName) { return }
-        tasks.add(taskName, Test).configure {
-            systemProperties['org.gradle.integtest.executer'] = mode
-        }
-    }
-}
-
-daemonIntegTest {
-    systemProperties['org.gradle.integtest.daemon.registry'] = file("$rootProject.buildDir/daemon").absolutePath
-
-    doLast {
-        if (project.hasProperty("waitForDaemonsToDieMillis")) {
-            println "Property 'waitForDaemonsToDieMillis' passed so I'm waiting $project.waitForDaemonsToDieMillis millis so that deamons can die with honor..."
-            Thread.sleep(Integer.parseInt(project.waitForDaemonsToDieMillis));
-        }
-    }
-}
-
-task integTest(type: Test) {
-    doFirst {
-        systemProperties['org.gradle.integtest.executer'] = integTestMode
-    }
-}
-
-tasks.findByName("check")?.dependsOn(integTest)
-
-class IntegTestPlugin implements Plugin<Project> {
-    public void apply(Project project) {
-        project.convention.plugins.integTest = new IntegTestConvention(project)
-    }
-}
-
-class IntegTestConvention {
-    private final Project project
-    final List integTests = []
-
-    IntegTestConvention(Project project) {
-        this.project = project
-    }
-
-    String getIntegTestMode() {
-        if (!project.tasks.findByName('ciBuild') || !project.gradle.taskGraph.populated) {
-            return null
-        }
-        if (project.isCIBuild()) {
-            return 'forking'
-        }
-        return 'embedded'
-    }
-
-    File getIntegTestUserDir() {
-        return project.file('intTestHomeDir')
-    }
-
-    File getIntegTestImageDir() {
-        if (!project.tasks.findByName('intTestImage')) {
-            return null
-        }
-        return project.intTestImage.destinationDir
     }
 }
